package main

type RecordMetadata struct {
	fileId        uint32
	valueSize     uint32
	valuePosition int64
	timestamp     uint64
}
